--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,3 @@
-
 .planning-poker-home {
   text-align: center;
   margin: 32px;
@@ -31,7 +30,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #ffffff
+  color: #ffffff;
 }
 
 .options-row {
@@ -56,7 +55,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #ffffff
+  color: #ffffff;
 }
 
 .option.selected .MuiPaper-root {
@@ -79,16 +78,16 @@
 .header-row {
   display: flex;
   margin: 16px;
-  justify-content: flex-end
+  justify-content: flex-end;
 }
 
 .MuiTypography-button {
-  text-transform: none!important;
+  text-transform: none !important;
 }
 
 .room-action-button {
-  text-transform: none!important;
-  margin-left: 16px!important;
+  text-transform: none !important;
+  margin-left: 16px !important;
 }
 
 .room-action-button svg {
@@ -105,4 +104,8 @@
 
 .room-action-button:hover .room-action-icon {
   display: none;
+}
+
+.options-dialog-actions {
+  justify-content: flex-end;
 }
